archetect-templating/tests/snapshots/test_templates__vm@err_undefined_nested_attr.txt.snap
---
source: archetect_templating/tests/test_templates.rs
description: "{{ seq.whatever }}\n{{ seq.whatever.else }}"
info:
  seq:
    - 1
    - 2
    - 3
input_file: archetect_templating/tests/inputs/err_undefined_nested_attr.txt
---
!!!ERROR!!!

Error {
    kind: UndefinedError,
    name: "err_undefined_nested_attr.txt",
    line: 2,
}

undefined value (in err_undefined_nested_attr.txt:2)
------------------------ err_undefined_nested_attr.txt ------------------------
   1 | {{ seq.whatever }}
   2 > {{ seq.whatever.else }}
     i       ^^^^^^^^^^^^^^ undefined value
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
Referenced variables: {
    seq: [
        1,
        2,
        3,
    ],
}
-------------------------------------------------------------------------------

