archetect-templating/tests/snapshots/test_templates__vm@escaping.html.snap
---
source: archetect_minijinja/tests/test_templates.rs
description: "<h1>{{ unsafe }}</h1>"
info:
  unsafe: "<foo>"
input_file: archetect_minijinja/tests/inputs/escaping.html
---
<h1>&lt;foo&gt;</h1>

