archetect-templating/tests/snapshots/test_templates__vm@extends.txt.snap
---
source: archetect_minijinja/tests/test_templates.rs
description: "{% extends template %}\n{% block title %}new title{% endblock %}\n{% block body %}new body{% endblock %}"
info:
  template: simple_layout.txt
input_file: archetect_minijinja/tests/inputs/extends.txt
---
<title>new title</title>
new body

