archetect-templating/tests/snapshots/test_templates__vm@filter_block.html.snap
---
source: archetect_templating/tests/test_templates.rs
description: "{% filter escape %}<p>{{ value }}</p>{% endfilter %}"
info:
  value: foo < bar
input_file: archetect_templating/tests/inputs/filter_block.html
---
<p>foo &lt; bar</p>

