archetect-templating/tests/snapshots/test_templates__vm@filter_block.txt.snap
---
source: archetect_templating/tests/test_templates.rs
description: "{% filter upper %}{{ egg }}{% endfilter %}"
info:
  egg: Humpty Dumpty sat on a wall
input_file: archetect_templating/tests/inputs/filter_block.txt
---
HUMPTY DUMPTY SAT ON A WALL

