archetect-templating/tests/snapshots/test_templates__vm@float_div_by_zero.txt.snap
---
source: archetect_templating/tests/test_templates.rs
description: "{{ 10.0 / 0.0 }}"
info: {}
input_file: archetect_templating/tests/inputs/float_div_by_zero.txt
---
inf

