archetect-templating/tests/snapshots/test_templates__vm@getattr.txt.snap
---
source: archetect_templating/tests/test_templates.rs
description: "name: {{ user.name }}\nactive: {{ user.is_active }}"
info:
  user:
    is_active: true
    name: Peter
input_file: archetect_templating/tests/inputs/getattr.txt
---
name: Peter
active: true

