archetect-templating/tests/snapshots/test_templates__vm@getitem.txt.snap
---
source: archetect_templating/tests/test_templates.rs
description: "first: {{ items[0] }}\nlast: {{ items[-1] }}\nname: {{ user[\"name\"] }}"
info:
  items:
    - first_item
    - middle_item
    - last_item
  user:
    name: Peter
input_file: archetect_templating/tests/inputs/getitem.txt
---
first: first_item
last: last_item
name: Peter

