archetect-templating/tests/snapshots/test_templates__vm@hello.txt.snap
---
source: archetect_templating/tests/test_templates.rs
description: "Hello {{ name }}!"
info:
  name: World
input_file: archetect_templating/tests/inputs/hello.txt
---
Hello World!

